src/test/ui/parser/struct-literal-restrictions-in-lamda.stderr
error: expected type, found `3`
  --> $DIR/struct-literal-restrictions-in-lamda.rs:13:12
   |
LL |         x: 3
   |            ^ expecting a type here because of type ascription
   |
   = note: type ascription is a nightly-only feature that lets you annotate an expression with a type: `<expr>: <type>`
note: this expression expects an ascribed type after the colon
  --> $DIR/struct-literal-restrictions-in-lamda.rs:13:9
   |
LL |         x: 3
   |         ^
   = help: this might be indicative of a syntax error elsewhere

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `{`
  --> $DIR/struct-literal-restrictions-in-lamda.rs:14:12
   |
LL |     }.hi() {
   |            ^ expected one of `.`, `;`, `?`, `}`, or an operator here

error[E0423]: expected value, found struct `Foo`
  --> $DIR/struct-literal-restrictions-in-lamda.rs:12:14
   |
LL |     while || Foo {
   |              ^^^ did you mean `(Foo { /* fields */ })`?

error[E0599]: no method named `hi` found for type `()` in the current scope
  --> $DIR/struct-literal-restrictions-in-lamda.rs:14:7
   |
LL |     }.hi() {
   |       ^^

error: aborting due to 4 previous errors

Some errors occurred: E0423, E0599.
For more information about an error, try `rustc --explain E0423`.
